Fixed the target having the wrong width and some styling on the profile page

--- a/app/static/css/styles.scss
+++ b/app/static/css/styles.scss
@@ -250,3 +250,7 @@ a.custom-card:hover {
     -moz-box-shadow: -1px 9px 40px -12px rgba(0,0,0,0.75);
     box-shadow: -5px 9px 40px -12px rgba(0,0,0,0.75);
 }
+
+.card-header{
+    color: #ffffff
+}
